# lambdachat

./: .ghcid  README.md  cabal.project  generate-capnp.sh  lambdachat.cabal  repl
app/: Client.hs  Server.hs
etc/: lambdachat-client-config.dhall  lambdachat.dhall
lambdachat/: lambdachat.cabal
lambdachat-client/: lambdachat-client.cabal
lambdachat-client/src/: Main.hs
lambdachat-client/src/LambdaChat/Client/: Config.hs  Main.hs
lambdachat-prelude/: lambdachat-prelude.cabal
lambdachat-prelude/src/: Prelude.hs
lambdachat-server/: lambdachat-server.cabal
lambdachat-server/src/: Main.hs
protocol/: message.capnp
src/: Prelude.hs
src/LambdaChat/: Crypto.hs
src/LambdaChat/Client/: Config.hs  Main.hs
src/LambdaChat/Effect/: FirstOrder.hs  Log.hs
src/LambdaChat/Proto/: Message.hs
src/LambdaChat/Server/: Chat.hs  LogMessage.hs  Main.hs
src/LambdaChat/Server/Effect/: ChatStorage.hs  GenerateUUID.hs  KeyValueStore.hs  PublishMessage.hs  ReceiveMessage.hs
