cabal-version: 2.4

name: lambdachat
version: 0

library
  build-depends:
    base,
    bytestring,
    containers,
    cryptonite,
    dhall,
    fused-effects ^>= 0.3.0,
    memory,
    optparse-applicative,
    safe-exceptions,
    text,
    transformers,
    zeromq4-haskell == 0.8.0,

  default-extensions:
    BangPatterns
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    UndecidableInstances

  default-language:
    Haskell2010

  exposed-modules:
    LambdaChat.Client.Config
    LambdaChat.Client.Main
    LambdaChat.Crypto
    LambdaChat.Effect.Log
    LambdaChat.Server.Effect.KeyValueStore
    LambdaChat.Server.Effect.PublishMessage
    LambdaChat.Server.Effect.ReceiveMessage
    LambdaChat.Server.Main
    Prelude

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude),
    base (Prelude as PreludeFromBase)

executable lambdachat-client
  build-depends:
    lambdachat,

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    app

  main-is:
    Client.hs

executable lambdachat-server
  build-depends:
    lambdachat,

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    app

  main-is:
    Server.hs
