cabal-version: 2.4

name: lambdachat
version: 0

library
  build-depends:
    base,
    bytestring,
    capnp ^>= 0.4.0,
    containers,
    cryptonite,
    dhall,
    fused-effects ^>= 0.3.0,
    generic-lens,
    lens,
    memory,
    monad-ste,
    optparse-applicative,
    safe-exceptions,
    text,
    time,
    transformers,
    uuid,
    zeromq4-haskell == 0.8.0,

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StrictData
    TypeApplications
    TypeOperators
    UndecidableInstances

  default-language:
    Haskell2010

  exposed-modules:
    Capnp.Gen.ById.Xfe94a8fd9f3ecbb7
    Capnp.Gen.Protocol.Message
    Capnp.Gen.Protocol.Message.Pure
    LambdaChat.Client.Config
    LambdaChat.Client.Main
    LambdaChat.Crypto
    LambdaChat.Effect.FirstOrder
    LambdaChat.Effect.Log
    LambdaChat.Proto.Message
    LambdaChat.Server.Chat
    LambdaChat.Server.Effect.ChatStorage
    LambdaChat.Server.Effect.GenerateUUID
    LambdaChat.Server.Effect.KeyValueStore
    LambdaChat.Server.Effect.PublishMessage
    LambdaChat.Server.Effect.ReceiveMessage
    LambdaChat.Server.LogMessage
    LambdaChat.Server.Main
    Prelude

  ghc-options:
    -Wall
    -fno-warn-name-shadowing

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude),
    base (Prelude as PreludeFromBase)

executable lambdachat-client
  build-depends:
    lambdachat,

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    app

  main-is:
    Client.hs

executable lambdachat-server
  build-depends:
    lambdachat,

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    app

  main-is:
    Server.hs
