cabal-version: 2.4

name: lambdachat-client
version: 0

executable lambdachat-client
  build-depends:
    base,
    bytestring,
    lambdachat-prelude,
    zeromq4-haskell == 0.8.0,

  default-extensions:
    OverloadedStrings

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    src

  main-is:
    Main.hs

  mixins:
    base hiding (Prelude)
