cabal-version: 2.4

name: lambdachat-server
version: 0

executable lambdachat-server
  build-depends:
    base,
    cryptonite,
    fused-effects ^>= 0.3.0,
    lambdachat-prelude,
    transformers,
    zeromq4-haskell == 0.8.0,

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    TypeOperators
    UndecidableInstances

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -O
    -threaded
    -rtsopts

  hs-source-dirs:
    src

  main-is:
    Main.hs

  mixins:
    base hiding (Prelude)
