cabal-version: 2.4

name: lambdachat
version: 0

library
  build-depends:
    base,
    bytestring,
    cryptonite,
    lambdachat-prelude,
    memory,
    text,

  default-extensions:
    LambdaCase
    ScopedTypeVariables

  default-language:
    Haskell2010

  exposed-modules:
    LambdaChat.Crypto

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude)
