cabal-version: 2.4

name: lambdachat
version: 0

library
  build-depends:
    base,
    bytestring,
    cryptonite,
    fused-effects,
    lambdachat-prelude,
    memory,
    text,
    transformers,

  default-extensions:
    DeriveFunctor
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    TypeOperators
    UndecidableInstances

  default-language:
    Haskell2010

  exposed-modules:
    LambdaChat.Crypto
    LambdaChat.Effect.Log

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  mixins:
    base hiding (Prelude)
